Add required things to package.json

--- a/package.json
+++ b/package.json
@@ -26,5 +26,26 @@
     "istanbul": "^0.3.2",
     "lodash": "^2.4.1",
     "minimatch": "^1.0.0"
+  },
+  "wct-plugin": {
+    "cli-options": {
+      "reporters": {
+        "help": "List of reporters to use",
+        "full": "reporters",
+        "list": true
+      },
+      "dir": {
+        "help": "Coverage directory",
+        "full": "dir"
+      },
+      "exclude": {
+        "help": "Scripts to exclude from testing",
+        "full": "exclude"
+      },
+      "include": {
+        "help": "Scripts to include in testing",
+        "full": "include"
+      }
+    }
   }
 }
