--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-component-tester-istanbul",
   "version": "0.6.1",
   "description": "Instanbul coverage reporting for projects being tested by web-component-tester",
-  "main": "lib/index.js",
+  "main": "lib/plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
