Convert request paths to file paths
The server configuration for `web-component-tester` was changed so
that all files are served under the `/components` path.  A lookup
table is used to map from request path to filesystem path.  In
order to instrument files, we need the filesystem path, so this
replicates the functionality of the `serve-waterfall` module in
order to build a lookup table based on `web-component-tester`
configuration.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "istanbul": "^0.3.2",
     "lodash": "^2.4.1",
-    "minimatch": "^1.0.0"
+    "minimatch": "^1.0.0",
+    "parseurl": "^1.3.0"
   },
   "wct-plugin": {
     "cli-options": {
