Add support for coverage thresholds
This adds the ability to specify a `thresholds` option in the
plugin config so that `wct` will fail when coverage does not
meet the configured thresholds, even if all tests pass.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/thedeeno/web-component-tester-istanbul",
   "dependencies": {
     "istanbul": "^0.3.2",
+    "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^2.4.1",
     "minimatch": "^1.0.0",
     "parseurl": "^1.3.0"
